Implemented creating task using JMS. Some little changes

--- a/FreelanceIt-war/web/login/login.xhtml
+++ b/FreelanceIt-war/web/login/login.xhtml
@@ -30,7 +30,8 @@ and open the template in the editor.
                     </td>
                 </tr>
             </table>
-            <p:commandButton action="j_security_check" value="Log in"/>
+            <h:commandButton type="submit" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" value="Log in" 
+                             style="font-size: larger"/>
         </form>
     </h:body>
 </html>
