--- a/FreelanceIt-war/web/tasks-created-by-me.xhtml
+++ b/FreelanceIt-war/web/tasks-created-by-me.xhtml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/templates/template.xhtml">
+                template="/templates/template.xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html">
+    <ui:define name="title">
+        My created tasks
+    </ui:define>
     <ui:define name="menu">
         <ui:include src="/templates/menu.xhtml"/>
     </ui:define>
     <ui:define name="content">
-        <ui:include src="/templates/main.xhtml"/>
+        <ui:include src="/templates/tasks-created-by-me.xhtml"/>
     </ui:define>
 </ui:composition>
